# guppy

./: .gitignore  AGENTS.md  README.md  bridge_view_refactor_plan.md  missing-features.md  mix.exs
config/: config.exs
examples/: click_counter.exs  counter.exs  hello_world.exs  kanban_todo.exs  style_gallery.exs  super_demo.exs  text_clicks.exs
lib/: guppy.ex
lib/guppy/: application.ex  component.ex  ir.ex  native.ex  server.ex  window.ex
lib/guppy/component/: compiler.ex
lib/guppy/native/: nif.ex
lib/mix/tasks/: guppy.native.build.ex
native/guppy_nif/: Cargo.toml  build.rs
native/guppy_nif/c_src/: guppy_nif.c
native/guppy_nif/src/: bridge_text_input.rs  bridge_view.rs  hello_window.rs  ir.rs  lib.rs  main_thread_runtime.rs  window_options.rs
native/guppy_nif/src/bridge_view/: events.rs  identity.rs  render_checkbox.rs  render_div.rs  render_icon.rs  render_image.rs  render_pass.rs  render_scroll.rs  render_spacer.rs  render_text.rs  render_text_input.rs  style.rs
test/: guppy_test.exs  test_helper.exs
