[package]
name = "guppy_nif"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "guppy_nif"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
async-task = "4.7.1"
eetf = "0.11.0"
gpui = { version = "0.2.2", features = ["test-support"] }
unicode-segmentation = "1.12.0"

[build-dependencies]
cc = "1"
